--- a/src/scss/layouts/_form.scss
+++ b/src/scss/layouts/_form.scss
@@ -30,6 +30,12 @@
     margin-right: 1rem;
   }
 
+  &__error{
+    text-align: center;
+    color:#FC4B3A;
+    width: 90%;
+  }
+
       
   @media (max-width: 992px) {
 
